--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Coolors Clone</title>
 </head>
 
 <body>
-
+    <div class="colors">
+        <div class="color">
+            <h2>Hex</h2>
+            <div class="controls"><button class="adjust"><i class="fas fa-sliders-h"></i></button>
+                <button class="lock"><i class="fas fa-lock-open"></i></button></div>
+        </div>
+        <div class="sliders">
+            <button class="close-adjustment">X</button>
+            <span>Hue</span>
+            <input type="range" min="0" max="360" step="1" name="hue">
+        </div>
+    </div>
     <script src="./app.js"></script>
 </body>
 
