--- a/index.html
+++ b/index.html
@@ -15,15 +15,87 @@
 
 <body>
     <div class="colors">
+        <!-- color-1 -->
         <div class="color">
             <h2>Hex</h2>
             <div class="controls"><button class="adjust"><i class="fas fa-sliders-h"></i></button>
-                <button class="lock"><i class="fas fa-lock-open"></i></button></div>
+                <button class="lock"><i class="fas fa-lock-open"></i></button>
+            </div>
+            <div class="sliders">
+                <button class="close-adjustment">X</button>
+                <span>Hue</span>
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="0">
+                <span>Brightness</span>
+                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='0'>
+                <spam>Saturation</spam>
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="0">
+            </div>
         </div>
-        <div class="sliders">
-            <button class="close-adjustment">X</button>
-            <span>Hue</span>
-            <input type="range" min="0" max="360" step="1" name="hue">
+        <!-- color - 2 -->
+        <div class="color">
+            <h2>Hex</h2>
+            <div class="controls"><button class="adjust"><i class="fas fa-sliders-h"></i></button>
+                <button class="lock"><i class="fas fa-lock-open"></i></button>
+            </div>
+            <div class="sliders">
+                <button class="close-adjustment">X</button>
+                <span>Hue</span>
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="1">
+                <span>Brightness</span>
+                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='1'>
+                <spam>Saturation</spam>
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="1">
+            </div>
+        </div>
+        <!-- color - 3 -->
+        <div class="color">
+            <h2>Hex</h2>
+            <div class="controls"><button class="adjust"><i class="fas fa-sliders-h"></i></button>
+                <button class="lock"><i class="fas fa-lock-open"></i></button>
+            </div>
+            <div class="sliders">
+                <button class="close-adjustment">X</button>
+                <span>Hue</span>
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2">
+                <span>Brightness</span>
+                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='2'>
+                <spam>Saturation</spam>
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2">
+            </div>
+        </div>
+    </div>
+    <div class="panel">
+        <div class="library-panel">
+            <button class="library">
+                <i class="fas fa-book-open"></i>
+            </button>
+            <p>Library</p>
+        </div>
+        <div class="general-panel">
+            <button class="generate"><i class="fas fa-sync"></i></button>
+            <p>Refresh</p>
+        </div>
+        <div class="save-panel">
+            <button class="generate"><i class="fas fa-save"></i></button>
+            <p>Save</p>
+        </div>
+    </div>
+    <div class="copy-container">
+        <div class="copy-popup">
+            <h1>Copied to Clipboard</h1>
+            <h4>&#128077</h4>
+        </div>
+    </div>
+    <div class="save-container">
+        <div class="save-popup"><button class="close-save">X</button>
+            <h4>Give a name to your pallete</h4>
+            <input type="text" max-length="35" class="save-name">
+            <button type="submit" class="submit-save">Save</button>
+        </div>
+    </div>
+    <div class="library-container">
+        <div class="library-popup"><button class="close-library">X</button>
+            <h4>Pick your pallete</h4>
         </div>
     </div>
     <script src="./app.js"></script>
