--- a/index.html
+++ b/index.html
@@ -63,6 +63,54 @@
                 <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2">
             </div>
         </div>
+        <!-- color- 4 -->
+        <div class="color">
+            <h2>Hex</h2>
+            <div class="controls"><button class="adjust"><i class="fas fa-sliders-h"></i></button>
+                <button class="lock"><i class="fas fa-lock-open"></i></button>
+            </div>
+            <div class="sliders">
+                <button class="close-adjustment">X</button>
+                <span>Hue</span>
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2">
+                <span>Brightness</span>
+                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='2'>
+                <spam>Saturation</spam>
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2">
+            </div>
+        </div>
+        <!-- color- 5 -->
+        <div class="color">
+            <h2>Hex</h2>
+            <div class="controls"><button class="adjust"><i class="fas fa-sliders-h"></i></button>
+                <button class="lock"><i class="fas fa-lock-open"></i></button>
+            </div>
+            <div class="sliders">
+                <button class="close-adjustment">X</button>
+                <span>Hue</span>
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2">
+                <span>Brightness</span>
+                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='2'>
+                <spam>Saturation</spam>
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2">
+            </div>
+        </div>
+        <!-- color- 6 -->
+        <div class="color">
+            <h2>Hex</h2>
+            <div class="controls"><button class="adjust"><i class="fas fa-sliders-h"></i></button>
+                <button class="lock"><i class="fas fa-lock-open"></i></button>
+            </div>
+            <div class="sliders">
+                <button class="close-adjustment">X</button>
+                <span>Hue</span>
+                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2">
+                <span>Brightness</span>
+                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='2'>
+                <spam>Saturation</spam>
+                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2">
+            </div>
+        </div>
     </div>
     <div class="panel">
         <div class="library-panel">
@@ -71,7 +119,7 @@
             </button>
             <p>Library</p>
         </div>
-        <div class="general-panel">
+        <div class="generate-panel">
             <button class="generate"><i class="fas fa-sync"></i></button>
             <p>Refresh</p>
         </div>
