html comments addeed

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             </div>
         </div>
     </div>
+    <!-- bottom panels -->
     <div class="panel">
         <div class="library-panel">
             <button class="library">
@@ -128,6 +129,7 @@
             <p>Save</p>
         </div>
     </div>
+    <!-- All popups -->
     <div class="copy-container">
         <div class="copy-popup">
             <h1>Copied to Clipboard</h1>
