--- a/index.html
+++ b/index.html
@@ -95,22 +95,6 @@
                 <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2">
             </div>
         </div>
-        <!-- color- 6 -->
-        <div class="color">
-            <h2>Hex</h2>
-            <div class="controls"><button class="adjust"><i class="fas fa-sliders-h"></i></button>
-                <button class="lock"><i class="fas fa-lock-open"></i></button>
-            </div>
-            <div class="sliders">
-                <button class="close-adjustment">X</button>
-                <span>Hue</span>
-                <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2">
-                <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='2'>
-                <spam>Saturation</spam>
-                <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2">
-            </div>
-        </div>
     </div>
     <!-- bottom panels -->
     <div class="panel">
@@ -148,6 +132,9 @@
             <h4>Pick your pallete</h4>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js"
+        integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./app.js"></script>
 </body>
 
