--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span>Hue</span>
                 <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="0">
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='0'>
+                <input type="range" min="0" max="1" step="0.01" name="bright" class="bright-input" data-bright='0'>
                 <spam>Saturation</spam>
                 <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="0">
             </div>
@@ -42,7 +42,7 @@
                 <span>Hue</span>
                 <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="1">
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='1'>
+                <input type="range" min="0" max="1" step="0.01" name="bright" class="bright-input" data-bright='1'>
                 <spam>Saturation</spam>
                 <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="1">
             </div>
@@ -58,7 +58,7 @@
                 <span>Hue</span>
                 <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="2">
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='2'>
+                <input type="range" min="0" max="1" step="0.01" name="bright" class="bright-input" data-bright='2'>
                 <spam>Saturation</spam>
                 <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="2">
             </div>
@@ -74,7 +74,7 @@
                 <span>Hue</span>
                 <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="3">
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='3'>
+                <input type="range" min="0" max="1" step="0.01" name="bright" class="bright-input" data-bright='3'>
                 <spam>Saturation</spam>
                 <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="3">
             </div>
@@ -90,7 +90,7 @@
                 <span>Hue</span>
                 <input type="range" min="0" max="360" step="1" name="hue" class="hue-input" data-hue="4">
                 <span>Brightness</span>
-                <input type="range" min="0" max="1" step="0.01" class="bright-input" data-bright='4'>
+                <input type="range" min="0" max="1" step="0.01" name="bright" class="bright-input" data-bright='4'>
                 <spam>Saturation</spam>
                 <input type="range" min="0" max="1" step="0.01" name="saturation" class="sat-input" data-sat="4">
             </div>
