--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p>Refresh</p>
         </div>
         <div class="save-panel">
-            <button class="generate"><i class="fas fa-save"></i></button>
+            <button class="save"><i class="fas fa-save"></i></button>
             <p>Save</p>
         </div>
     </div>
@@ -123,7 +123,7 @@
     <div class="save-container">
         <div class="save-popup"><button class="close-save">X</button>
             <h4>Give a name to your pallete</h4>
-            <input type="text" max-length="35" class="save-name">
+            <input type="text" max-length="35" placeholder="eg. web3 Palette" class="save-name">
             <button type="submit" class="submit-save">Save</button>
         </div>
     </div>
@@ -132,7 +132,6 @@
             <h4>Pick your pallete</h4>
         </div>
     </div>
-    <input type="range" class="check-range" min="0" max="1" step="0.01">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js"
         integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
